<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">e-fam</string>
    <string name="title_activity_list_shops">Shops</string>
    <string name="title_activity_list_shops_brands">%1$s</string>
    <string name="title_activity_list_shops_branches">Branches</string>
    <string name="action_settings">Settings</string>
    <string name="action_menu">Settings</string>
    <string name="is_connected"></string>
    <string name="start_shopping">Shop</string>
    <string name="shops">Shops</string>
    <string name="disclaimer">All products are subject to a one shilling surcharge</string>
    <string name="title_activity_activity_test">ActivityTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    
    <string name="rating_queryOne">How would you rate the delivery service?</string>
    <string name="rating_queryTwo">How easy is it to use e-fam app?</string>
    <string name="rating_queryThree">Would you recommend e-fam to your friends?</string>
    
    <string name="rating_fair">Fair</string>
    <string name="rating_good">Good</string>
    <string name="rating_excellent">Excellent</string>
    <string name="rating_yes">Yes</string>
    <string name="rating_no">No</string>
    <string name="rating_maybe">Maybe</string>
    
    <string name="neighbourhood_prompt">Select Your Neighbourhood</string>
    <string name="gender_prompt">Select Your Gender</string>
    <string-array name="planets_array">
        <item>Female</item>
        <item>Male</item>
    </string-array>
        <string name="nunuaraha_is_facilitator_between_customer_and_outlet">E-FAM IS FACILITATOR BETWEEN CUSTOMER AND OUTLET</string>

</resources>
