<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ratingForm"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
	android:background="@color/blackCC"
    android:visibility="gone" >
   
  <RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="20dp"
	    android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center" >
    
      	<TextView
	        android:id="@+id/rateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="20dp"
    		android:text="Customer Satisfaction Review"
            android:textColor="@color/green"
            android:textSize="20sp"/>
	    
	    <TextView
	        android:id="@+id/queryOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
	        android:layout_below="@+id/rateTitle"
    		android:text="@string/rating_queryOne"
            android:textColor="@color/grey333"/>
	    
	    <RadioGroup
	        android:id="@+id/queryOneRadioGroup"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/queryOne"
	        android:layout_marginBottom="24dp"
	        android:orientation="horizontal"  >
	
	        <RadioButton
	            android:id="@+id/queryOneRadio1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/rating_fair"
	            android:textColor="@color/grey333" />
	
	        <RadioButton
	            android:id="@+id/queryOneRadio2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/rating_good"
	            android:textColor="@color/grey333"/>
	
	        <RadioButton
	            android:id="@+id/queryOneRadio3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/rating_excellent"
	            android:textColor="@color/grey333" />
	    </RadioGroup>
	    
	    
	    <TextView
	        android:id="@+id/queryTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    		android:layout_below="@+id/queryOneRadioGroup"
    		android:text="@string/rating_queryTwo"
            android:textColor="@color/grey333"/>
	    
	    <RadioGroup
	        android:id="@+id/queryTwoRadioGroup"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/queryTwo"
	        android:layout_marginBottom="24dp"
	        android:orientation="horizontal" >
	
	        <RadioButton
	            android:id="@+id/queryTwoRadio1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/rating_fair"
	            android:textColor="@color/grey333" />
	
	        <RadioButton
	            android:id="@+id/queryTwoRadio2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/rating_good"
	            android:textColor="@color/grey333" />
	
	        <RadioButton
	            android:id="@+id/queryTwoRadio3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/rating_excellent"
	            android:textColor="@color/grey333" />
	    </RadioGroup>
	    
	    <TextView
	        android:id="@+id/queryThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    		android:layout_below="@+id/queryTwoRadioGroup"
    		android:text="@string/rating_queryThree"
            android:textColor="@color/grey333"/>
	    
	    <RadioGroup
	        android:id="@+id/queryThreeRadioGroup"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/queryThree"
	        android:layout_marginBottom="24dp"
	        android:orientation="horizontal" >
	
	        <RadioButton
	            android:id="@+id/queryThreeRadio1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/rating_yes"
	            android:textColor="@color/grey333" />
	
	        <RadioButton
	            android:id="@+id/queryThreeRadio2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/rating_no"
	            android:textColor="@color/grey333" />
	
	        <RadioButton
	            android:id="@+id/queryThreeRadio3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/rating_maybe"
	            android:textColor="@color/grey333" />
	    </RadioGroup>
	    
	    <Button
	         android:id="@+id/rateButton"
		     android:layout_height="wrap_content"
		     android:layout_width="wrap_content"
	         android:layout_below="@+id/queryThreeRadioGroup" 
             android:layout_alignParentLeft="true"
             android:paddingTop="0dp"
             android:paddingBottom="0dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
       		 android:background="@drawable/customgreenbuttonshape"
       		 android:textColor="#FFFFFF"
		     android:text="Rate" />
	    
	    <Button
	         android:id="@+id/cancelRatingButton"
		     android:layout_height="wrap_content"
		     android:layout_width="wrap_content"
	         android:layout_below="@+id/queryThreeRadioGroup"
             android:layout_alignParentRight="true"
             android:paddingTop="0dp"
             android:paddingBottom="0dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
       		 android:background="@drawable/customgreenbuttonshape"
       		 android:textColor="#FFFFFF"
		     android:text="Cancel" />
	 </RelativeLayout>
</RelativeLayout>
